--- a/src/css/_field-tailwindcss.css
+++ b/src/css/_field-tailwindcss.css
@@ -1,5 +1,5 @@
 .floating-field{
-    @apply relative z-0 h-fit;
+    @apply relative h-fit;
 }
 
 .floating-field .input{
@@ -56,7 +56,7 @@
 
 .floating-field > .label{
     @apply absolute text-sm text-gray-500
-    duration-300 transform -translate-y-3.5 scale-75 top-4 z-10 origin-[0]
+    duration-300 transform -translate-y-3.5 scale-75 top-4 origin-[0]
     start-2.5;
     @apply bg-gray-50;
 }
@@ -83,11 +83,10 @@
 }
 
 .floating-field.select2{
-    @apply z-[2];
 }
 
 .floating-field.select2 > .label{
-    @apply top-2.5;
+    @apply top-2.5 z-0
 }
 
 .floating-field.select2 .input{}
@@ -100,7 +99,8 @@
 }
 
 .floating-field.select2 .input > ul{
-    @apply absolute -ml-2.5 mt-1 max-h-60 w-full overflow-auto rounded-md bg-white py-1 text-base shadow-lg ring-1 ring-black/5 focus:outline-none sm:text-sm;
+    @apply absolute z-10 -ml-2.5 mt-1 max-h-60 w-full overflow-auto rounded-md;
+    @apply bg-white py-1 text-base shadow-lg ring-1 ring-black/5 focus:outline-none sm:text-sm;
 }
 
 .floating-field.select2 .input > ul > li{
